force-app/main/default/objects/ObdCAMS__e.object
<CustomObject>
    <description>Flow triggered outbound integration - Campus Access Management System.
Initially created for Vaccinate Monash to trigger requests for access from Infiniti, based on case status.</description>
    <fields>
        <fullName>Action__c</fullName>
        <description>Action Request Information</description>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correlation_Id__c</fullName>
        <description>Related SObject Record Id</description>
        <label>Correlation Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Id__c</fullName>
        <description>Individual Id to track person&apos;s</description>
        <label>Individual Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Outbound CAMS</label>
    <pluralLabel>Outbound CAMS</pluralLabel>
</CustomObject>